examples/imaxt/owlcli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: owlcli
spec:
  containers:
  - name: owlcli
    image: imaxt/owl-server:0.7.1
    args: ["/bin/bash", "-c", "echo PS1=\"'owlcli> '\" >~/.bash_aliases && trap : TERM INT; sleep infinity & wait"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
